<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:animateLayoutChanges="true"
    android:background="@android:drawable/dialog_holo_light_frame">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/Export"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/Generating"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sendHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:id="@+id/send" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:id="@+id/progress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/backupHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:id="@+id/backup" />

    <ImageView
        android:src="@drawable/checkmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView3"
        android:layout_toRightOf="@+id/sendHeader"
        android:layout_toEndOf="@+id/sendHeader"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp"
        android:id="@+id/checkGenerate" />

    <ImageView
        android:src="@drawable/checkmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/sendHeader"
        android:layout_toRightOf="@+id/sendHeader"
        android:layout_toEndOf="@+id/sendHeader"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp"
        android:id="@+id/checkSend" />

    <ImageView
        android:src="@drawable/checkmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/backupHeader"
        android:layout_toRightOf="@+id/sendHeader"
        android:layout_toEndOf="@+id/sendHeader"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp"
        android:id="@+id/checkBackup" />

    <TextView
        android:id="@+id/sendHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/backup"
        android:layout_alignEnd="@+id/textView3"
        android:layout_alignRight="@+id/textView3"
        android:layout_marginTop="25dp"
        android:text="@string/Forwarding"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:visibility="gone" />

    <TextView
        android:id="@+id/backupHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:enabled="false"
        android:text="@string/Backing_up"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:id="@+id/outcome"
        android:background="@drawable/border_black"
        android:textSize="@dimen/text_size_small"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_below="@+id/send"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <Button
        android:text="@string/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/outcome"
        android:layout_centerHorizontal="true"
        android:id="@+id/closeButton"
        android:layout_marginTop="10dp" />



</RelativeLayout>